# ===================================================================
# ym-logic のための CMakeLists.txt
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory(gtest)


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set (sop_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/SopBase.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopBase_cube.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCube.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCube_check.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_concate.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_diff.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_compare.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_sort.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
