# ===================================================================
# ym-logic のための CMakeLists.txt
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory(gtest)


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set (sop_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/SopBase.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_algdiv.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_commoncube.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_concate.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_cofactor.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_compare.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_diff.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_product.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/SopCover_sort.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
