# ===================================================================
# ym-logic のための CMakeLists.txt
# ===================================================================


# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================

# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory(gtest)


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set (tvfunc_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/TvFunc.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/TvFunc_analyze.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/TvFunc_walsh.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/TvFuncM.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Tv2Sop.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Tv2Bdd.cc
  PARENT_SCOPE
  )


# ===================================================================
#  ターゲットの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
