
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
#  マクロの定義
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  bcf_test
# ===================================================================

set ( bcf_test_SOURCES
  bcf_test.cc
  )

add_executable ( bcf_test
  ${bcf_test_SOURCES}
  $<TARGET_OBJECTS:ym_logic_obj>
  $<TARGET_OBJECTS:ym_base_obj>
  )

target_link_libraries ( bcf_test
  ${YM_LIB_DEPENDS}
  )


# ===================================================================
#  bcf_test_d
# ===================================================================

add_executable ( bcf_test_d
  ${bcf_test_SOURCES}
  $<TARGET_OBJECTS:ym_logic_obj_d>
  $<TARGET_OBJECTS:ym_base_obj_d>
  )

target_compile_options ( bcf_test_d
  PRIVATE "-g"
  )

target_link_libraries ( bcf_test_d
  ${YM_LIB_DEPENDS}
  )
