# ===================================================================
# ym-logic/gtest のための CMakeLists.txt
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories()


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  ターゲットの設定
# ===================================================================

add_executable( gen_factor
  gen_factor.cc
  $<TARGET_OBJECTS:ym_base_obj>
  $<TARGET_OBJECTS:ym_logic_obj>
  )

target_link_libraries ( gen_factor
  ${YM_LIB_DEPENDS}
  )

target_compile_options ( gen_factor
  PRIVATE "-O3"
  )

target_compile_definitions ( gen_factor
  PRIVATE "-DNDEBUG"
  )

add_executable( gen_factor_d
  gen_factor.cc
  $<TARGET_OBJECTS:ym_base_obj_d>
  $<TARGET_OBJECTS:ym_logic_obj_d>
  )

target_link_libraries ( gen_factor_d
  ${YM_LIB_DEPENDS}
  )

target_compile_options ( gen_factor_d
  PRIVATE "-g"
  )


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
